--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,12 @@
-name: Run Cypress Tests
-on: [push]
+name: End-to-end tests
+on: push
 jobs:
-  install:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        containers: [1, 2, 3]
+  cypress-run:
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install modules
-        run: npm ci
-      - name: Cypress
-        uses: cypress-io/github-action@v3
-        with:
-          browser: chrome
-          headless: true
-          record: true
-          start: npm run dev
-          wait-on: http://localhost:5173
-          parallel: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/checkout@v3
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
